# animdl

./: .gitignore  MANIFEST.in  __main__.py  animdl-test.py  animdl.py  cli-beta.py  cli.py  cli_old.py  cloudflare.md  config.env  config.env.example  console_entry_points.conf  disclaimer.md  last-curated-test.json  pyproject.toml  readme.md  requirements.txt  runner.py  setup.py  uncomp_server_vlc.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  inquiry.md
.github/workflows/: codeql-analysis.yml  nuitka-release.yml  pypi.yml
animdl/: __main__.py  runner.py
animdl/core/: __init__.py  __version__.py  logger.py  package_resolver.py
animdl/core/cli/: exit_codes.py  http_client.py
animdl/core/codebase/: __init__.py  associator.py
animdl/core/config/: __init__.py
animdl/utils/: __init__.py  http_caching.py  http_client.py  media_downloader.py  optopt.py  powertools.py  searching.py  serverfiles.py
core/: __init__.py  __version__.py  associator.py  classes.py  logger.py  readme.md
core/animefillerlist/: __init__.py
core/animixplay/: search.py  stream_url.py
core/cli/commands/: continuation.py  download.py  grab.py  schedule.py  search.py  stream.py  test.py
core/cli/helpers/: __init__.py  fun.py  player.py  processors.py  searcher.py  sessions.py
core/clicore/commands/: constants.py  continuation.py  download.py  grab.py  schedule.py  stream.py
core/clicore/helpers/: __init__.py  fun.py  processors.py  searchonsite.py  sfhandler.py  xmpv.py
core/codebase/: __init__.py  associator.py
core/config/: __init__.py
core/downloader/: __init__.py  download.py  hls_download.py  idmanlib.py
core/extractors/: kwik.py  readme.md  vidstream.py
core/helper/: __init__.py  cli_helper.py
core/providers/: __init__.py  readme.md
core/twistmoe/: stream_url.py
dev/: readme.md
(+149 files in other folders)
