[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "animdl"
version = "1.7.3"
description = "A highly efficient, fast, powerful and light-weight anime downloader and streamer for your favorite anime."
readme = "readme.txt"
authors = [ "justfoolingaround <kr.justfoolingaround@gmail.com>",]
license = "GPT-3"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
anchor-kr = "~=0.1.3"
anitopy = "~=2.1.0"
click = "~=8.0.4"
comtypes = "~=1.1.11"
cssselect = "~=1.1.0"
httpx = "~=0.23.0"
tqdm = "~=4.62.3"
pycryptodomex = "~=3.14.1"
regex = "~=2022.10.31"
yarl = "~=1.8.1"
pyyaml = "~=6.0"
packaging = "^22.0"
pkginfo = "^1.9.2"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
animdl = "animdl.__main__:__animdl_cli__"
